[package]
name = "dwd_alerts"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Linus Warecka"]
description = "A wrapper around the dwd alerts api"
repository = "https://github.com/LinusWPunkt/dwd_alerts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dwd_alerts"
path = "src/lib.rs"

[[example]]
name = "print_all_warnings"
crate-type = ["bin"]



[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0.152", features = ["serde_derive"]}
serde_derive = "1.0.152"
serde_json = "1.0.91"
